--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -38,14 +38,13 @@
         animation-delay: 1s;
 }
 
-.about-page,
-.contact-page {
+.about-page {
     .text-area {
         position: absolute;
         left: 10%;
-        top: 45%;
+        // top: 45%;
         transform: translateY(-50%);
-        width: 35%;
+        // width: 35%;
         vertical-align: middle;
         display: table-cell;
         max-height: 90%;
@@ -57,7 +56,7 @@
             margin-bottom: 15px;
             font-weight: 400;
             margin-top: 0;
-            position: relative;
+            // position: relative;
             left: 10px;
 
             &::before {
